--- a/Tester/Tester.csproj
+++ b/Tester/Tester.csproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="test.doshik" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DoshikLangCompiler\DoshikLangCompiler.csproj">
