futher projects restructuring. added cache for external api. now it's only gets generated from udon sdk libs when not cached on disk or in memory. did that for lang server, but it seems that i have to remove dependency on System.Type first, because it makes runtime dependency on unity and udon types in language server (these types are referenced in external api classes by using DotnetType fields -> System.Type)

--- a/DoshikLangCompiler/DoshikLangCompiler.csproj
+++ b/DoshikLangCompiler/DoshikLangCompiler.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DoshikExternalApi\DoshikExternalApi.csproj" />
     <ProjectReference Include="..\DoshikLangIR\DoshikLangIR.csproj" />
   </ItemGroup>
 
