--- a/DoshikExternalApiCache/DoshikExternalApiCache.csproj
+++ b/DoshikExternalApiCache/DoshikExternalApiCache.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Antlr4.Runtime.Standard" Version="4.8.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="AntlrGenerated\" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
