--- a/DoshikExternalApiGenerator/DoshikExternalApiGenerator.csproj
+++ b/DoshikExternalApiGenerator/DoshikExternalApiGenerator.csproj
@@ -4,40 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-
   <ItemGroup>
-    <Compile Remove="Assets\DoshikSDK\Editor\ExternalDlls\**" />
-    <EmbeddedResource Remove="Assets\DoshikSDK\Editor\ExternalDlls\**" />
-    <None Remove="Assets\DoshikSDK\Editor\ExternalDlls\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Assets\DoshikSDK\Editor\DoshikProgramAsset.cs" />
-    <Compile Remove="Assets\DoshikSDK\Editor\ScriptImporter\CreateNewDoshikProgramFileEndNameEditAction.cs" />
-    <Compile Remove="Assets\DoshikSDK\Editor\ScriptImporter\DoshikScriptImporter.cs" />
-    <Compile Remove="Assets\DoshikSDK\Editor\ScriptImporter\DoshikScriptImporterEditor.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Assets\DoshikSDK\Editor\DoshikProgramAsset.cs" />
-    <None Include="Assets\DoshikSDK\Editor\ScriptImporter\CreateNewDoshikProgramFileEndNameEditAction.cs" />
-    <None Include="Assets\DoshikSDK\Editor\ScriptImporter\DoshikScriptImporter.cs" />
-    <None Include="Assets\DoshikSDK\Editor\ScriptImporter\DoshikScriptImporterEditor.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.CodeDom" Version="4.7.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DoshikLangIR\DoshikLangIR.csproj" />
+    <ProjectReference Include="..\DoshikExternalApi\DoshikExternalApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -90,5 +58,4 @@
       <HintPath>..\ExternalDlls\VRCSDK\Plugins\VRCSDKBase.dll</HintPath>
     </Reference>
   </ItemGroup>
-
 </Project>
