--- a/Tester/Tester.csproj
+++ b/Tester/Tester.csproj
@@ -110,6 +110,10 @@
       <Project>{7C698793-04D7-4BD0-A112-6FBA09BAF3BE}</Project>
       <Name>DoshikLangCompiler</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DoshikLangIR\DoshikLangIR.csproj">
+      <Project>{aa81bff3-85bc-4160-8d76-e90149839cd6}</Project>
+      <Name>DoshikLangIR</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.6\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
