--- a/DoshikExternalApiGenerator/DoshikExternalApiGenerator.csproj
+++ b/DoshikExternalApiGenerator/DoshikExternalApiGenerator.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DoshikExternalApiCache\DoshikExternalApiCache.csproj" />
     <ProjectReference Include="..\DoshikExternalApi\DoshikExternalApi.csproj" />
   </ItemGroup>
 
